# aiwolf-nlp-llm-agent

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/player/: agent.py  possessed.py  seer.py  villager.py  werewolf.py
src/res/: config.ini.example  prompt.py
src/res/llm/: chatgpt.ini.example  gemini.ini.example
src/utils/: agent_log.py  agent_util.py
src/utils/llm/ChatGPT/: __init__.py  aiwolf_nlp_gpt.py  chatgpt.py  message_role.py  optional_params.py
src/utils/llm/Gemini/: gemini.py  message_role.py
