[project]
name = "aiwolf-nlp-agent"
version = "0.2.3"
description = "aiwolf-nlp-agent"
license = { file = "LICENSE" }
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["aiwolf-nlp-common==0.3.5", "openai==1.58.1", "tiktoken==0.8.0", "python-dotenv==1.0.1", "google-generativeai==0.8.3"]
authors = [
    { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
    { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
    { name = "ysahashi", email = "ysahashi@kanolab.net" },
]
maintainers = [
    { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
    { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
    { name = "ysahashi", email = "ysahashi@kanolab.net" },
]
keywords = ["aiwolf"]

[project.urls]
Homepage = "https://aiwolf.org"
